--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,6 +1,33 @@
 body{
   font-family: 'Cabin', sans-serif;
+  background-image: url(http://www.internalvoices.org/transfile/big/22/221258_beautiful-girl-wallpaper.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 header{
-  font-family:
+  font-size: 45px;
+  margin-top: 12%;
+  margin-left: 10%;
+  margin-right: 40%;
+}
+h1{
+  margin-left: 10%;
+  margin-right: 40%;
+  margin-bottom: 5%;
+}
+div{
+  background: hsla(0, 100%, 100%, 0.7);
+  border: 1px solid white;
+  margin-left: 10%;
+  margin-right: 40%;
+  margin-bottom: 2%;
+  padding-top: 2%;
+}
+aside{
+  position: fixed;
+  z-index: 1;
+  padding-left: 2%;
+}
+p{
+  padding-left: 15%;
 }
