--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -1,16 +1,19 @@
 body{
   font-family: 'Cabin', sans-serif;
+  font-size: 2.5vh;
+  background-color: #b2b4b7;
   background-image: url(http://www.internalvoices.org/transfile/big/22/221258_beautiful-girl-wallpaper.jpg);
   background-size: 100%;
   background-repeat: no-repeat;
 }
 header{
-  font-size: 45px;
+  font-size: 280%;
   margin-top: 12%;
   margin-left: 10%;
   margin-right: 40%;
 }
 h1{
+  font-size: 100%;
   margin-left: 10%;
   margin-right: 40%;
   margin-bottom: 5%;
@@ -22,6 +25,7 @@ div{
   margin-right: 40%;
   margin-bottom: 2%;
   padding-top: 2%;
+  padding-bottom: 50px;
 }
 aside{
   position: fixed;
@@ -29,5 +33,6 @@ aside{
   padding-left: 2%;
 }
 p{
+  font-size: 100%;
   padding-left: 15%;
 }
