--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -2,7 +2,7 @@ html{
   height: 100%;
 }
 body{
-  font-family: 'Cabin', sans-serif;
+  font-family: 'Sacramento', cursive;
   font-size: 2.5vh;
   background-color: #b2b4b7;
   background-image: url(http://www.internalvoices.org/transfile/big/22/221258_beautiful-girl-wallpaper.jpg);
