first bio;layout

--- a/02week/bio/css/style.css
+++ b/02week/bio/css/style.css
@@ -11,32 +11,42 @@ body{
 }
 header{
   font-size: 280%;
-  margin-top: 12%;
+  margin-top: 8%;
   margin-left: 10%;
   margin-right: 40%;
 }
+.into{
+  background: hsla(0, 30%, 100%, 0.3);
+}
 h1{
   font-size: 100%;
+  font-style: oblique;
   margin-left: 10%;
   margin-right: 40%;
   margin-bottom: 5%;
 }
-div{
+main{
+  box-sizing: border-box;
+  margin: 20px auto;
+  border-radius: 5px;
   background: hsla(0, 30%, 100%, 0.8);
-  border: 1px solid white;
+  border-radius: 5px;
   margin-left: 10%;
-  margin-right: 40%;
+  margin-right: 10%;
   margin-bottom: 2%;
   padding-top: 2%;
+  padding-right: 2%;
   padding-bottom: 50px;
 }
 aside{
-  position: fixed;
-  z-index: 1;
+  box-sizing: border-box;
+  float: left;
+  width: 6%;
+  height: 100%;
   padding-left: 2%;
 }
 p{
-  font-size: 100%;
+  font-size: 110%;
   padding-left: 15%;
 }
 .links{
